force-app/main/default/objects/BIR_Project_Tracker__c/BIR_Project_Tracker__c.object-meta.xml
<CustomObject>
    <description>A look up junction relationship between BIR and Project Tracker</description>
    <label>BIR-Project Tracker</label>
    <nameField>
        <displayFormat>1{000}</displayFormat>
        <label>BIR-Project Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIR-Project Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>