force-app/main/default/objects/BIR_Project_Tracker__c/fields/Bid_Information_Request__c.field-meta.xml
<CustomField>
    <fullName>Bid_Information_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Information Request</label>
    <referenceTo>Bid_Information_Request__c</referenceTo>
    <relationshipLabel>BIR-Project Trackers</relationshipLabel>
    <relationshipName>BIR_Project_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>