force-app/main/default/objects/BIR_Project_Tracker__c/fields/Project_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Project_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Tracker</label>
    <referenceTo>Project_Tracker__c</referenceTo>
    <relationshipLabel>BIR-Project Trackers</relationshipLabel>
    <relationshipName>BIR_Project_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>