force-app/main/default/objects/BIR_Project_Tracker__c/fields/Reference_Contract__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contract__c</fullName>
    <formula>Bid_Information_Request__r.Customer_Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Contract</label>
    <type>Text</type>
</CustomField>