force-app/main/default/objects/BIR_Project_Tracker__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <formula>Bid_Information_Request__r.Response_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>